# if2010-pemrograman-berorientasi-objek-tugas-besar-1-if2010-oop2526-tubes1

./: .gitignore  AGENTS.md  BUILD_GUIDE.md  CMakeLists.txt  Makefile  OOPClassDesign.md  README.md  build.bat  build.sh  check_colors.py  generate_boards.py  load_game_patch.py  makefile  patch_action.sh  structure.md  validate_board.py
.claude/: ClassDesign.md  GUI.md  GUI_Plan.md  Task.md  context.md
config/: aksi.txt  property.txt
config/32/: board.txt  property.txt
config/36/: board.txt  property.txt
config/40/: board.txt  property.txt
config/52/: board.txt
config/56/: aksi.txt  board.txt
config/60/: aksi.txt  board.txt
data/: account.txt  bad_save.txt  test_save.txt
doc/: class_diagram.plantuml
include/app/: GameApp.hpp
include/controllers/: HumanController.hpp  PlayerController.hpp
include/core/: AccountManager.hpp  Auction.hpp  AuctionManager.hpp  Board.hpp  BoardFormatter.hpp  CardManager.hpp  ColorGroup.hpp  Command.hpp  ConfigLoader.hpp  DataManager.hpp  Deck.hpp  Dice.hpp  EconomyController.hpp  EconomyManager.hpp  EffectManager.hpp  Enums.hpp  Exceptions.hpp  Game.hpp  GameContext.hpp  GameController.hpp  GameEngine.hpp  GameException.hpp  GameLoop.hpp  GameManager.hpp  GameRenderer.hpp  InsufficientFundException.hpp  LiquidationManager.hpp  MovementHandler.hpp  Player.hpp  Property.hpp  SaveLoadManager.hpp  SkillCardManager.hpp  Tile.hpp  TileVisitor.hpp  Tiles.hpp  TradeManager.hpp  TransactionLogger.hpp  TurnController.hpp  TurnManager.hpp  bank.h  (+8 more)
include/data/: ConfigParser.hpp  ConfigReader.hpp  FileParser.hpp  GameLoader.hpp  GameSaver.hpp  TransactionLogger.hpp  configloader.h  savemanager.h
include/data-layer/: Config.hpp  GameStateLoader.hpp  GameStateSaver.hpp  Loader.hpp
include/gui/: NimonspoliGUI.hpp  RenderConfig.hpp
include/logic/: Board.hpp  Game.hpp
include/models/: AbilityCard.hpp  AbilityCardDeck.hpp  ActionCard.hpp  ActionTile.hpp  Board.hpp  Card.hpp  CardTile.hpp  ChanceCards.hpp  ChanceTile.hpp  CommunityCards.hpp  CommunityChestTile.h  CommunityChestTile.hpp  ConfigData.hpp  Deck.hpp  DerivedAbilityCard.hpp  FestivalTile.hpp  FreeParkingTile.hpp  GameBoard.hpp  GameState.hpp  GoTile.hpp  GoToJailTile.hpp  JailTile.hpp  LogEntry.hpp  Money.hpp  Papan.hpp  Pemain.hpp  Petak.hpp  PetakProperti.hpp  Player.hpp  PlayerActionService.hpp  Property.hpp  PropertyTile.hpp  Railroad.hpp  RailroadProperty.hpp  Saveable.hpp  SkillCard.hpp  SkillCards.hpp  SpecialTile.hpp  Street.hpp  StreetProperty.hpp  (+6 more)
include/ui/: AppScreen.hpp  AssetManager.hpp  GUIInput.hpp  GUIView.hpp  IGameInput.hpp  IGameView.hpp  RaylibCompat.hpp  UiDtos.hpp  boardprinter.h  gameCLI.h
include/utils/: ActionCard.hpp  Board.hpp  CardDeck.hpp  ConfigLoader.hpp  ConfigParser.hpp  ConfigReader.hpp  Dice.hpp  Enums.hpp  Exceptions.hpp  FileFormatException.hpp  FileHelper.hpp  FileWriteException.hpp  GameException.hpp  GameStateSerializer.hpp  InputHandler.hpp  LogEntry.hpp  Logger.hpp  NimonspoliException.hpp  SaveLoadManager.hpp  SaveManager.hpp  SkillCard.hpp  StreetTile.hpp  Structs.hpp  Types.hpp
include/views/: BoardRenderer.hpp  BoardView.hpp  Button.hpp  CommandParser.hpp  CommandProcessor.hpp  DisplayView.hpp  DsiplayManager.hpp  Flexbox.hpp  Formatter.hpp  GameWindow.hpp  GridContainer.hpp  GridItem.hpp  HorizontalFlexbox.hpp  InGameScene.hpp  InputHandler.hpp  Label.hpp  MainMenuScene.hpp  Nimonspoli.hpp  PlayerView.hpp  Popup.hpp  PropertyRenderer.hpp  PropertyView.hpp  Scene.hpp  SceneManager.hpp  TransactionLogger.hpp  VerticalFlexbox.hpp
legacy/DataAccess/: ConfigParser.cpp  ConfigParser.hpp
legacy/Entities/: Dice.cpp  Dice.hpp  Player.cpp  Player.hpp
nimonspoli-gui/: Makefile
nimonspoli-gui/config/: aksi.txt  misc.txt  property.txt  railroad.txt
nimonspoli-gui/data/: Lolo.txt  PVB.txt  PVP.txt  PVPplease.txt  PVPred4yellow5.txt  autosave_20260426_145213.txt  autosave_20260426_145803.txt  autosave_20260426_145854.txt  autosave_20260426_222923.txt  cek.txt  cektrunsave.txt  cekturnsave.txt  dnumgl.txt  festival.txt  final.txt  haloSemua.txt  lol.txt  love.txt  new.txt  okay.txt  plsya.txt  testingyuk.txt
nimonspoli-gui/src/: main.cpp
src/: main.cpp  test_gamewindow.cpp  test_saveloadmanager.cpp
src/app/: GameApp.cpp
src/controllers/: ComputerController.cpp  HumanController.cpp
src/core/: Auction.cpp  AuctionManager.cpp  BankruptcyManager.cpp  Board.cpp  BoardFormatter.cpp  COMPlayer.cpp  Card.cpp  CardManager.cpp  Command.cpp  CommandProcessor.cpp  DataManager.cpp  Deck.cpp  Dice.cpp  EconomyManager.cpp  EffectManager.cpp  Enums.cpp  Game.cpp  GameContext.cpp  GameController.cpp  GameEngine.cpp  GameManager.cpp  GameRenderer.cpp  GameState.cpp  Gameloop.cpp  GreedyCOMStrategy.cpp  InsufficientFundException.cpp  LiquidationManager.cpp  MovementHandler.cpp  Player.cpp  Railroad.cpp  SaveLoadManager.cpp  SimpleCOMStrategy.cpp  SkillCardManager.cpp  Street.cpp  Tax.cpp  Tile.cpp  TradeManager.cpp  TransactionLogger.cpp  TurnManager.cpp  Ultility.cpp  (+9 more)
src/data/: ConfigParser.cpp  FileParser.cpp  GameLoader.cpp  GameSaver.cpp  TransactionLogger.cpp  configloader.cpp  savemanager.cpp
src/data-layer/: AccountDataManager.cpp  Config.cpp  ConfigComposer.cpp  ConfigHandler.cpp  ConfigTestDriver.cpp  GameStateLoader.cpp  GameStateSaveLoadTestDriver.cpp  GameStateSaver.cpp
src/gui/: AssetManager.cpp
src/models/: AbilityCardDeck.cpp  ActionCard.cpp  ActionTile.cpp  Board.cpp  Card.cpp  CardTile.cpp  ChanceCards.cpp  ChanceTile.cpp  CommunityCards.cpp  CommunityChestCard.cpp  CommunityChestTile.cpp  DerivedAbilityCard.cpp  FestivalTile.cpp  FreeParkingTile.cpp  GameBoard.cpp  GameContext.cpp  GoTile.cpp  GoToJailTile.cpp  JailTile.cpp  LogEntry.cpp  Money.cpp  Papan.cpp  Pemain.cpp  Petak.cpp  PetakProperti.cpp  Player.cpp  PlayerActionService.cpp  Property.cpp  PropertyTile.cpp  Railroad.cpp  RailroadProperty.cpp  SkillCard.cpp  SkillCards.cpp  SpecialTile.cpp  Street.cpp  StreetTile.cpp  (+7 more)
tests/: BoardRenderer_standalone_test.cpp.cpp  test_config.cpp  test_dummy_display.cpp  test_final_cli.cpp  test_input.cpp  test_logger.cpp
(+468 files in other folders)
